@@ -14,6 +14,8 @@ Pint Changelog
 - Fix a recursion error that would be raised when passing quantities to `cond` and `x`.
   (Issue #1510, #1530)
 - Update test_non_int tests for pytest.
+- Fix masked arrays (with multiple values) incorrectly being passed through
+  setitem (Issue #1584)
 
 0.19.2 (2022-04-23)
 -------------------
